--- a/src/components/overflow/index.css
+++ b/src/components/overflow/index.css
@@ -10,3 +10,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.overflow-container {
+  width: 100%;
+  height: 50px;
+  margin: auto;
+  border: 1px solid #00f;
+}
