--- a/src/components/overflow/index.css
+++ b/src/components/overflow/index.css
@@ -5,6 +5,21 @@
   border: 1px solid #f00;
 }
 
+/* 单行文本超出省略
+overflow : hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
+*/
+
+/* 多行文本超出省略
+overflow : hidden;
+text-overflow: ellipsis;
+
+display: -webkit-box;
+-webkit-line-clamp: 2;
+-webkit-box-orient: vertical;
+*/
+
 .overflow-container {
   position: relative;
   width: 100%;
