--- a/src/components/form/index.css
+++ b/src/components/form/index.css
@@ -1,26 +1,33 @@
 .form-demo label {
-  position: relative;
-  display: inline-block;
-  width: 80px;
+	position: relative;
+	display: inline-block;
+	width: 80px;
 }
 
 .form-demo label::after {
-  content: ":";
-  position: absolute;
+	content: ':';
+	position: absolute;
 }
 
 .form-demo .zh label {
-  margin: 0 10px 0 0;
-  text-align-last: justify;
+	margin: 0 10px 0 0;
+	text-align-last: justify;
 }
 
 .form-demo .en label {
-  margin: 0 10px 0 0;
-  text-align: right;
+	margin: 0 10px 0 0;
+	text-align: right;
 }
 
 .form-demo label + input {
-  width: 235px;
-  padding: 0;
-  padding-inline-start: 1px;
+	width: 235px;
+	padding: 0;
+	padding-inline-start: 1px;
+}
+
+.antdForm {
+	display: flex;
+	justify-content: center;
+	padding: 20px 0 0;
+	border: 1px solid orange;
 }
