--- a/src/components/grid/index.css
+++ b/src/components/grid/index.css
@@ -6,7 +6,7 @@
 .grid-wraper {
 	display: grid;
 	/* grid-template-rows: repeat(1, 50%); */
-	/* grid-template-rows: 1fr 2fr; */
+	grid-template-rows: 1fr 1fr;
 	/* grid-template-columns: repeat(3, 33.33%); */
 	/* grid-template-columns: repeat(auto-fill, 100px); */
 	grid-template-columns: 1fr 1fr 1fr;
@@ -19,7 +19,7 @@
 	/* grid-column-gap: 20px; */
 
 	/* grid-gap: <grid-row-gap> <grid-column-gap>; */
-	grid-gap: 0 20px;
+	grid-gap: 20px 20px;
 
 	padding: 10px;
 	border: 1px solid blue;
