--- a/src/components/grid/index.css
+++ b/src/components/grid/index.css
@@ -9,8 +9,8 @@
 	grid-template-rows: 1fr 1fr;
 	/* grid-template-columns: repeat(3, 33.33%); */
 	/* grid-template-columns: repeat(auto-fill, 100px); */
-	/* grid-template-columns: 1fr 1fr 1fr; */
-	grid-template-columns: 30px 50px 20px;
+	grid-template-columns: 1fr 1fr 1fr;
+	/* grid-template-columns: 30px 50px 20px; */
 	/* grid-template-columns: repeat(12, 1fr); */
 	/* grid-template-columns: 150px 1fr 2fr; */
 	/* grid-template-columns: 1fr 1fr minmax(100px, 1fr); */
@@ -46,4 +46,23 @@
 .grid-item {
 	height: 100%;
 	background: orange;
+}
+
+.item1 {
+	/* grid-column-start: 1; */
+	/* grid-column-end: 3; */
+	/* grid-row-start: 2; */
+	/* grid-row-end: 4; */
+
+	/* grid-column-start: span 2; */
+
+	/* grid-column: <start-line> / <end-line>; */
+	/* grid-column: 1 / 3; */
+	/* grid-column: 1; */
+	/* grid-row: <start-line> / <end-line>; */
+	/* grid-row: 2 / 4; */
+	/* grid-row: 1; */
+
+	/* grid-area: <row-start> / <column-start> / <row-end> / <column-end>; */
+	grid-area: 2 / 1 / 4 / 3;
 }
