--- a/src/components/grid/index.css
+++ b/src/components/grid/index.css
@@ -28,11 +28,16 @@
 	/* grid-row-gap属性设置行与行的间隔（行间距），grid-column-gap属性设置列与列的间隔（列间距）。 */
 	/* grid-row-gap: 20px; */
 	/* grid-column-gap: 20px; */
+	/* 新标准 */
+	/* row-gap: 20px; */
+	/* column-gap: 20px; */
 
 	/* grid-gap属性是grid-column-gap和grid-row-gap的合并简写形式 */
 	/* 若grid-gap省略了第二个值，浏览器认为第二个值等于第一个值。 */
 	/* grid-gap: <grid-row-gap> <grid-column-gap>; */
-	grid-gap: 20px 20px;
+	/* grid-gap: 20px 20px; */
+	/* 新标准 */
+	gap: 20px 20px;
 
 	/* grid-auto-flow: row; */
 	/* grid-auto-flow: row dense; */
